# Hackathon-Task-Manager

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/server/: settings.py
